# experimentiq

./: .env.example  .gitignore  README.md  docker-compose.yml  experimentiq.pbix  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py
config/: __init__.py  logging_config.py  settings.py
database/: constraints.sql  indexes.sql  schema.sql  seed.py  views.sql
docs/: SETUP_GUIDE.md
sql/funnel/: funnel_completion.sql  funnel_steps.sql
sql/metrics/: conversion_metrics.sql  daily_metrics.sql  session_metrics.sql
sql/monitoring/: daily_srm_check.sql  data_quality.sql
sql/revenue/: order_analysis.sql  revenue_per_visitor.sql
sql/segmentation/: channel_segment.sql  country_segment.sql  device_segment.sql
sql/validation/: completeness_check.sql  srm_check.sql
src/analytics/: __init__.py  dataset_builder.py  funnel_analyzer.py  metrics_engine.py  segment_analyzer.py
src/generators/: __init__.py  event_generator.py  experiment_generator.py  order_generator.py  session_generator.py  user_generator.py
src/ingestion/: __init__.py  bulk_loader.py  db_connection.py  schema_validator.py
src/recommendations/: __init__.py  decision_rules.py  recommendation_engine.py
src/reporting/: __init__.py  dataset_exporter.py  pdf_generator.py  report_builder.py
src/reporting/templates/: report.html.j2  styles.css
src/statistics/: __init__.py  confidence_interval.py  effect_size.py  hypothesis_test.py  multiple_testing.py  outlier_analysis.py  power_analysis.py  srm_detector.py
src/utils/: __init__.py  dataframe_utils.py  file_utils.py  timer.py
src/validation/: __init__.py  data_validator.py  pipeline_guard.py
tests/: conftest.py
tests/unit/: test_statistics.py
